# epdx

./: .gitignore  .releaserc.yaml  CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build_javascript.yaml  build_js.yaml  build_python.yaml  build_rust.yaml  cicd.yaml  create_release.yaml  docs.yaml  publish_javascript.yaml  publish_js.yaml  publish_python.yaml  python.yaml  release.yaml  release_docs.yaml  rust.yaml
docs/: index.md  schemas.md  usage.md
docs/code/javascript/: usage.js
docs/code/python/: usage.py
docs/overrides/partials/integrations/analytics/: custom.html
docs/overrides/stylesheets/: extra.css
docs/schemas/: epdx.schema.json
docs/usage/: custom_parser_python.md
src/: epd.rs  ilcd.rs  javascript.rs  lcabyg.rs  lib.rs  parse.rs  python.rs  schemars.rs
tests/: ilcd.rs  parse.rs  test_parse_ilcd.rs  test_parse_lcabyg.rs
tests/datafixtures/: 0e85f255-4d11-4973-9daa-c03889948351.json  f63ac879-fa7d-4f91-813e-e816cbdf1927.json
