[project]
name = "epdx"
description = "EPDx is a library for parsing EPD files into a common exchange format."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Christian Kongsgaard", email = "christian@kongsgaard.eu" },
]

dependencies = [
    "pydantic >=2.0.0"
]

[project.optional-dependencies]
doc = [
    "mkdocs-material >=8.1.4,<9.0.0",
    "mdx-include >=1.4.1,<2.0.0",
]
codegen = [
    "datamodel-code-generator",
]
tests = [
    'pytest',
    "pytest-datafixtures"
]

[project.urls]
homepage = "https://epdx.kongsgaard.eu"
documentation = "https://epdx.kongsgaard.eu"
repository = "https://github.com/ocni-dtu/epdx"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pybindings"]
python-source = "packages/python/src"
